Mon Jun 30 2014
1. Bug fixing
   * Return full covariance matrices in FP.cov and RP.cov

2. Changes
   * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
   * Enabled use of the coef, vcov and logLik functions
   * Added stubs for predict, residuals, df.residual and fitted

Fri Jun 20 2014
1. Bug fixing
   * Added check that CAR is only requested at one level, unless CAR mean centring is turned on

2. Changes
   * Added option to turn on CAR mean centring

Mon Jun 9 2014
1. Changes
   * 1 can now be used in the model formula to specify an intercept term
   * If debugmode is turned on MLwiN will pause before and after fitting the model
   * Added extra estimation option to allow extra binomial/poisson/negative binomial/multinomial variables in (R)IGLS
   * Added reset estimation option to control negative variances in (R)IGLS models
   * Added constraints option for fixed and random part in (R)IGLS models
   * Allow more data variables by finding empty columns for output rather than hardcoding column numbers

Fri Jun 6 2014
1. Bug fixing
   * Don't bother running the model with (R)IGLS first if initial values have been specified by the user
   * Ensure that EstM is set to one when the BUGO option is specified in the demos
   * Allow initial values to be specified for (R)IGLS estimateion

2. Changes
   * Check EstM option is set to zero or one
   * Check response type and link functions are valid
   * Check that the selected residual options are valid for the current estimation method
   * Only allow weighting to be specified if the model is univariate and is esimated with (R)IGLS
   * Don't allow clre and smat options to be specified at the same time as they current clash
   * Only allow factor models to be specified if the model is multivariate and estimated with MCMC
   * Disallow cross-classification options if the model is estimated with (R)IGLS